test/compilable/cppmangle2.d
module cppmangle2;

extern(C++, Namespace18922)
{
    struct Struct18922 { int i; }
}
